# rust-pre-public-cli-template

./: AGENTS.md  AGENTS.ts  Cargo.toml  README.md  README.ts  fnox.toml  mise.toml  setup.ts
.github/workflows/: ci.yml
.repoconf/hooks/: post-init.sh
src/: command.rs  lib.rs  main.rs  types.rs
src/types/: cli.rs  command.rs
src/types/command/: print_command.rs
