[package]
name = "nomnomnom"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
derive-new = "0.7.0"
derive_builder = "0.20.0"
derive_more = { version = "1.0.0", features = ["full"] }
derive_setters = { version = "0.1.6" }
fmt-derive = "0.1.2"
helpful = { git = "https://github.com/DenisGorbachev/helpful" }
indexmap = { version = "2.4.0" }
itertools = { version = "0.14.0" }
not-found-error = { version = "0.2.1" }
rust_decimal = { version = "1.36.0" }
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.137" }
standard-traits = { git = "https://github.com/DenisGorbachev/standard-traits" }
strum = { version = "0.26.3", features = ["derive"] }
stub-macro = { version = "0.1.3" }
subtype = { git = "https://github.com/DenisGorbachev/subtype" }
tokio = { version = "1.39.2", features = ["macros", "fs", "net", "rt", "rt-multi-thread"] }
url = { version = "2.5.2", features = ["serde"] }
url-macro = { version = "0.1.6" }
